<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:gravity="center"
    android:background="@color/dark_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="40dp"
        android:paddingHorizontal="20dp"
        android:background="@color/white"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="INICIAR SESIÓN"
                android:textSize="28sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/robotoblack"
                android:layout_marginVertical="10dp"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingresa aqui tus credenciales para iniciar sesión"
                android:textSize="18sp"
                android:textColor="@color/dark_blue2"
                android:fontFamily="@font/robotolight"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:layout_marginVertical="20dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:fontFamily="@font/robotomedium"
                android:text="E-MAIL"
                android:textAllCaps="true"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/txtEmail"
                android:hint="Ingresa correo electrónico"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:fontFamily="@font/robotolight"
                android:inputType="textEmailAddress"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:fontFamily="@font/robotomedium"
                android:text="CONTRASEÑA"
                android:textAllCaps="true"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/robotolight"
                    android:inputType="textPassword"
                    android:hint="Ingrese su contraseña"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/login_img_show_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_visibility_24"/>

                    <ImageView
                        android:id="@+id/login_img_hide_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_baseline_visibility_off_24"
                        android:visibility="gone"/>
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="INICIAR SESIÓN"
                android:fontFamily="@font/robotoregular"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:backgroundTint="@color/dark_blue" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btn_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/shadow_red"
                android:fontFamily="@font/robotomedium"
                android:text="CREAR UNA NUEVA CUENTA"
                android:padding="5dp"
                android:textColor="@color/dark_blue"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="¿Olvidaste tu contraseña?"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:fontFamily="@font/robotolight"/>

            <TextView
                android:id="@+id/txt_forgot_password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Restablécela ahora"
                android:textSize="18sp"
                android:textColor="@color/shadow_red"
                android:fontFamily="@font/robotomedium"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>